# q2-skani

./: .coveragerc  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  q2-ci.yaml
conda-recipe/: meta.yaml
environment-files/: q2-fastani-qiime2-metagenome-2025.4.yml  q2-skani-qiime2-moshpit-2025.4.yml  q2-skani-qiime2-tiny-2025.4.yml
q2_skani/: __init__.py  plugin_setup.py  skani.py
q2_skani/tests/: __init__.py  test_methods.py
q2_skani/tests/data/: test.matrix  test_invalid.matrix  test_na.matrix
